--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset='UTF-8'>
     <title>Taveira's House</title>
-    <!--<link rel='stylesheet' type='text/css' href='https://cdn.rawgit.com/denistaveira/ArduinoVentilador/25807fa5/styles.css'>-->
-    <link rel='stylesheet' type='text/css' href='styles.css'>
+    <link rel='stylesheet' type='text/css' href='https://cdn.rawgit.com/denistaveira/ArduinoVentilador/25807fa5/styles.css'>
+    <!--<link rel='stylesheet' type='text/css' href='styles.css'>-->
 </head>
 <body>
 <H1 align='center'>Taveira's House</H1>
@@ -21,7 +21,20 @@
 <div id='botao_04'></div>
 <div id='estado_04' style='visibility: hidden;'>0</div>
 
-<script src='controle.js' charset='utf-8'></script>
+<div id='botao_05'></div>
+<div id='estado_05' style='visibility: hidden;'>0</div>
+
+<div id='botao_06'></div>
+<div id='estado_06' style='visibility: hidden;'>0</div>
+
+<div id='botao_07'></div>
+<div id='estado_07' style='visibility: hidden;'>0</div>
+
+<div id='botao_08'></div>
+<div id='estado_08' style='visibility: hidden;'>0</div>
+
+<script src='https://cdn.rawgit.com/denistaveira/MulitDeviceControl/c47c34f1/controle.js' charset='utf-8'></script>
+<!--<script src='controle.js' charset='utf-8'></script>-->
 
 </body>
 </html>
